# acca

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
acca-as/: Cargo.toml
acca-as-proc-macro/: Cargo.toml
acca-as-proc-macro/src/: lib.rs
acca-as/examples/: exc.acca  hello.acca
acca-as/src/: grammar.pest  main.rs
acca-assembly-support/: CHANGELOG.md  README.md  language-configuration.json  package.json
acca-assembly-support/syntaxes/: acca-asm.tmLanguage.json
acca-emu/: Cargo.toml
acca-emu-proc-macro/: Cargo.toml  tmp.txt
acca-emu-proc-macro/src/: lib.rs  util.rs
acca-emu/src/: main.rs  util.rs  vm.rs
llvm-examples/: CMakeLists.txt  link.ld  make-compile-commands.sh
llvm-examples/exc/: CMakeLists.txt  compile.sh  exc.c
llvm-examples/hello/: CMakeLists.txt  compile.sh  hello.c  hello.ld
llvm-examples/include/acca/: acca.h  base.h  exceptions.h
spec/: book.toml  devnotes.md
spec/src/: README.md  SUMMARY.md  exceptions.md  instructions.md  operation.md  registers.md
